lab_01_1/errors.txt
./lab_01_1.c:1:1: error: unknown type name ‘include’ Не хватает #
    1 | include studio.h
      | ^~~~~~~



./lab_01_1.c:1:10: error: #include expects "FILENAME" or <FILENAME> Имя подключаемой библиотеки не выделено галочками
    1 | #include studio.h
      | 


./lab_01_1.c:1:10: fatal error: studio.h: No such file or directory studio вместо stdio
    1 | #include <studio.h>
      |          ^~~~~~~~~~


./lab_01_1.c:3:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘{’ token
    3 | main{}
      |     ^
должны быть круглые скобки вместо фигурных

./lab_01_1.c:7:2: error: expected declaration specifiers or ‘...’ before ‘s’
    7 |  s: = 56;
      |  ^
Оператор присваивания должен быть '=', а не ":="

./lab_01_1.c:7:2: error: expected declaration specifiers or ‘...’ before ‘s’
    7 |  s = 56;
      |  ^
логический блок открыт круглыми скобками, а не фигурными

./lab_01_1.c:3:1: error: return type defaults to ‘int’ [-Werror=implicit-int]
    3 | main()

main должен возвращать значение типа int

./lab_01_1.c:8:2: error: implicit declaration of function ‘print’; did you mean ‘printf’? [-Werror=implicit-function-declaration]
    8 |  print (Year has s weeks)
      |  ^~~~~


не print - printf


./lab_01_1.c: In function ‘main’:
./lab_01_1.c:8:9: error: ‘Year’ undeclared (first use in this function)
    8 |  printf(Year has s weeks)
      |         ^~~~

Строка должна быть в кавычках

./lab_01_1.c:8:28: error: expected ‘;’ before ‘}’ token
    8 |  printf("Year has s weeks")

В конце строки должна стоять ;


./lab_01_1.c: In function ‘main’:
./lab_01_1.c:6:6: error: variable ‘s’ set but not used [-Werror=unused-but-set-variable]
    6 |  int s;
      |      ^

s не используется - в printf проставим %d: s - int
